# cpp-script

./: README.md  image_recognition.cpp  image_recognition.h  main.cpp  mouse.cpp  mouse.h  program.h
examples/penzu_dairy_autonomation/: CMakeLists.txt  image_recognition.cpp  keyboard.cpp  main.cpp  mouse.cpp  mouse.h  program.cpp
examples/programming_2_minute_rule/: image_recognition.h  keyboard.h  main.cpp  program.h
mouse_input/: CMakeLists.txt  image_recognition.cpp  image_recognition.h  keyboard.cpp  keyboard.h  main.cpp  mouse.cpp  mouse.h  program.cpp  system_operations.cpp  system_operations.h  test.cpp  test2.cpp
tests/: main2.cpp  test2.cpp
